--- a/src/index.html
+++ b/src/index.html
@@ -12,91 +12,284 @@
     <title>Document</title>
   </head>
   <body>
-    <nav>
-      <div>
-        <div>
-          <p>
-            <a href="">mazdak hosting</a>
-          </p>
-        </div>
-        <div>
-          <a href="">Pricing</a>
-          <a href="">Contact</a>
-          <button>
-            <a href="">Login</a>
-          </button>
-        </div>
-      </div>
-    </nav>
-    <main>
-      <div>
-        <h2></h2>
-        <p class="text-xl">mazzzz</p>
-        <div>
-          <button></button>
-          <button></button>
-        </div>
-      </div>
-      <div>
-        <img src="" alt="" />
-      </div>
-    </main>
-    <section id="Pricing">
-      <div>
-        <div class="1">
-          <div>
-            <h2></h2>
-            <p></p>
-            <div>
-              <div></div>
-              <div></div>
+    <div id="Hero" class="bg-red-100">
+      <header class="absolute inset-x-0 top-0 z-50">
+        <nav
+          class="flex items-center justify-between p-6 lg:px-8"
+          aria-label="Global"
+        >
+          <div class="flex lg:flex-1">
+            <a href="#Hero" class="-m-1.5 p-1.5">
+              <span class="sr-only"></span>
+              <h2 class="h-8 w-auto uppercase font-extrabold text-4xl">
+                mazdak hosting
+              </h2>
+            </a>
+          </div>
+          <div class="flex lg:hidden">
+            <button
+              type="button"
+              class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700"
+            >
+              <span class="sr-only">Open main menu</span>
+              <svg
+                class="size-6"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                aria-hidden="true"
+                data-slot="icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+                />
+              </svg>
+            </button>
+          </div>
+          <div class="hidden md:flex md:gap-x-12">
+            <a href="#Pricing" class="text-lg font-bold text-gray-900"
+              >Pricing</a
+            >
+            <a href="#Contact" class="text-lg font-bold text-gray-900"
+              >Contact</a
+            >
+          </div>
+          <div class="hidden lg:flex lg:flex-1 lg:justify-end">
+            <a
+              href="#"
+              class="rounded-md bg-gray-800 px-3.5 py-2.5 text-md font-bold text-white shadow-sm hover:bg-gray-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-800 uppercase"
+              >Log in <span aria-hidden="true">&rarr;</span></a
+            >
+          </div>
+        </nav>
+        <!-- Mobile menu, show/hide based on menu open state. -->
+        <div class="lg:hidden" role="dialog" aria-modal="true">
+          <!-- Background backdrop, show/hide based on slide-over state. -->
+          <div class="fixed inset-0 z-50"></div>
+          <div
+            class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10"
+          >
+            <div class="flex items-center justify-between">
+              <a href="#" class="-m-1.5 p-1.5">
+                <span class="sr-only">Your Company</span>
+                <h2 class="h-8 w-auto sm:hidden uppercase text-4xl">
+                  mazdak hosting
+                </h2>
+              </a>
+              <button
+                type="button"
+                class="-m-2.5 rounded-md p-2.5 bg-gray-500 text-gray-700"
+              >
+                <span class="sr-only">Close menu</span>
+                <svg
+                  class="size-6"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  aria-hidden="true"
+                  data-slot="icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M6 18 18 6M6 6l12 12"
+                  />
+                </svg>
+              </button>
             </div>
-            <button></button>
-            <div>
-              <h4></h4>
-              <ul>
-                <!--li for items-->
-              </ul>
+            <div class="mt-8 flow-root">
+              <div class="-my-6 divide-y divide-gray-500/10">
+                <div class="space-y-2 py-10">
+                  <a
+                    href="#Pricing"
+                    class="-mx-3 block rounded-lg px-3 py-2 text-md font-bold text-gray-900 hover:bg-gray-300"
+                    >Pricing</a
+                  >
+                  <a
+                    href="#Contact"
+                    class="-mx-3 block rounded-lg px-3 py-2 text-md font-bold text-gray-900 hover:bg-gray-300"
+                    >Contact</a
+                  >
+                </div>
+                <div class="py-6">
+                  <a
+                    href="#"
+                    class="-mx-3 block rounded-lg px-3 py-2.5 uppercase text-md font-bold text-gray-900 hover:bg-gray-300"
+                    >Log in</a
+                  >
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="2">
-          <div>
-            <h2></h2>
-            <p class="text-2xl">maaaaa</p>
-            <div>
-              <div></div>
-              <div></div>
-            </div>
-            <button></button>
-            <div>
-              <h4></h4>
-              <ul>
-                <!--li for items-->
-              </ul>
+      </header>
+
+      <div class="relative isolate px-6 pt-14 lg:px-8">
+        <div
+          class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
+          aria-hidden="true"
+        >
+          <div
+            class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
+            style="
+              clip-path: polygon(
+                74.1% 44.1%,
+                100% 61.6%,
+                97.5% 26.9%,
+                85.5% 0.1%,
+                80.7% 2%,
+                72.5% 32.5%,
+                60.2% 62.4%,
+                52.4% 68.1%,
+                47.5% 58.3%,
+                45.2% 34.5%,
+                27.5% 76.7%,
+                0.1% 64.9%,
+                17.9% 100%,
+                27.6% 76.8%,
+                76.1% 97.7%,
+                74.1% 44.1%
+              );
+            "
+          ></div>
+        </div>
+        <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
+          <div class="text-center">
+            <h1
+              class="text-balance text-5xl font-semibold tracking-tight text-gray-900 sm:text-7xl"
+            >
+              Build Your Online Presence with WordPress
+            </h1>
+            <p
+              class="mt-8 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8"
+            >
+              Start your website with our Free WordPress Hosting. Mazdak Hosting
+              offers reliable performance, easy setup, and essential features
+              without any cost.
+            </p>
+            <div class="mt-10 flex items-center justify-center gap-x-6">
+              <a
+                href="#"
+                class="rounded-md bg-gray-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-gray-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-gray-800 uppercase"
+                >sing up</a
+              >
+              <a
+                href="#Pricing"
+                class="text-sm/6 font-semibold text-gray-900 bg-gray-400 hover:bg-gray-300 uppercase rounded-md px-3.5 py-2.5"
+                >view prices<span aria-hidden="true">→</span></a
+              >
             </div>
           </div>
         </div>
-        <div class="3">
-          <div>
-            <h2></h2>
-            <p></p>
-            <div>
-              <div></div>
-              <div></div>
+        <div
+          class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]"
+          aria-hidden="true"
+        >
+          <div
+            class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]"
+            style="
+              clip-path: polygon(
+                74.1% 44.1%,
+                100% 61.6%,
+                97.5% 26.9%,
+                85.5% 0.1%,
+                80.7% 2%,
+                72.5% 32.5%,
+                60.2% 62.4%,
+                52.4% 68.1%,
+                47.5% 58.3%,
+                45.2% 34.5%,
+                27.5% 76.7%,
+                0.1% 64.9%,
+                17.9% 100%,
+                27.6% 76.8%,
+                76.1% 97.7%,
+                74.1% 44.1%
+              );
+            "
+          ></div>
+        </div>
+      </div>
+    </div>
+    <section id="Pricing" class="bg-red-100">
+      <div class="flex justify-evenly items-center">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 w-full h-full">
+          <!-- Basic Plan -->
+          <div class="bg-white p-6 rounded-lg shadow-lg text-center">
+            <h2 class="text-5xl font-extrabold text-purple-600">Basic</h2>
+            <p class="mt-2 mb-10 text-gray-700 font-semibold">
+              Great for Your First Site
+            </p>
+            <div class="mt-8">
+              <span class="text-3xl font-bold">$</span>
+              <span class="text-3xl font-bold">0.25</span>
+              <p class="text-gray-700">/month</p>
             </div>
-            <button></button>
-            <div>
-              <h4></h4>
-              <ul>
-                <!--li for items-->
-              </ul>
+            <button
+              class="mt-6 w-full h-14 bg-purple-600 text-white text-xl font-semibold py-2 rounded-lg"
+            >
+              Order
+            </button>
+
+            <h4 class="text-2xl pt-8 font-bold text-purple-600">Features</h4>
+            <ul class="Features-list mt-6 space-y-2 text-gray-600">
+              <!--li for items-->
+            </ul>
+          </div>
+          <!-- Web Pro Plan -->
+          <div class="bg-white p-6 rounded-lg shadow-lg text-center">
+            <h2 class="text-5xl font-extrabold text-purple-600">Web Pro</h2>
+            <p class="mt-2 mb-10 text-gray-700 font-semibold">
+              Great for Small Businesses
+            </p>
+            <div class="mt-8">
+              <span class="text-3xl font-bold">$</span>
+              <span class="text-3xl font-bold">7.00</span>
+              <p class="text-gray-700">/month</p>
             </div>
+            <button
+              class="mt-6 w-full h-14 bg-purple-600 text-white text-xl font-semibold py-2 rounded-lg"
+            >
+              Order
+            </button>
+
+            <h4 class="text-2xl pt-8 font-bold text-purple-600">Features</h4>
+            <ul class="Features-list mt-6 space-y-2 text-gray-600">
+              <!--li for items-->
+            </ul>
+          </div>
+          <!-- Web Pro Plus Plan -->
+          <div class="bg-white p-6 rounded-lg shadow-lg text-center">
+            <h2 class="text-5xl font-extrabold text-purple-600">
+              Web Pro Plus
+            </h2>
+            <p class="mt-2 mb-10 text-gray-700 font-semibold">
+              Great for Established Endevours
+            </p>
+            <div class="mt-8">
+              <span class="text-3xl font-bold">$</span>
+              <span class="text-3xl font-bold">9.00</span>
+              <p class="text-gray-700">/month</p>
+            </div>
+            <button
+              class="mt-6 w-full h-14 bg-purple-600 text-white text-xl font-semibold py-2 rounded-lg"
+            >
+              order
+            </button>
+
+            <h4 class="text-2xl pt-8 font-bold text-purple-600">Features</h4>
+            <ul class="Features-list mt-6 space-y-2 text-gray-600">
+              <!--li for items-->
+            </ul>
           </div>
         </div>
       </div>
     </section>
-    <footer class="px-0 py-10">
+    <footer id="Contact" class="px-0 py-10">
       <div
         class="container flex sm:justify-between justify-center items-center gap-10 max-sm:flex-col"
       >
