add some commands

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
     <title>Home</title>
   </head>
   <body>
+    <!--Add Hero section for page, contains Hedear and Main-->
     <div id="Hero" class="shadow-lg">
+      <!--Header section-->
       <header class="sm:fixed absolute bg-gray-300 inset-x-0 top-0 z-50">
         <nav
           class="flex items-center justify-between p-6 lg:px-8"
@@ -41,6 +43,7 @@
               >Contact</a
             >
           </div>
+          <!--Go to Login Page-->
           <div class="hidden md:flex md:flex-1 md:justify-end">
             <a
               href="../authentication/log-in.html"
@@ -50,6 +53,7 @@
           </div>
         </nav>
       </header>
+      <!--Main section-->
       <div
         class="mx-auto py-20 sm:py-32 md:mx-auto md:max-w-4xl md:py-32 lg:py-48"
       >
@@ -69,6 +73,7 @@
           <div
             class="mt-20 md:mt-24 md:flex md:items-center md:justify-center flex items-center justify-around gap-x-6"
           >
+            <!--Go to Signup Page-->
             <a
               href="../authentication/sign-up.html"
               class="rounded-md bg-gray-800 px-3.5 py-2.5 text-md font-bold text-white shadow-sm hover:bg-gray-700 focus-visible:outline-gray-800 uppercase"
@@ -90,6 +95,7 @@
         </div>
       </div>
     </div>
+    <!--Pricing section-->
     <section id="Pricing">
       <div class="bg-gray-700">
         <article class="text-center py-10 md:text-center md:py-10">
@@ -249,6 +255,7 @@
         </div>
       </div>
     </section>
+    <!--Footer section-->
     <footer id="Contact" class="px-0 py-10 bg-blue-200">
       <div
         class="container flex sm:justify-between justify-evenly items-center gap-10 max-sm:flex-col"
